# Hotel-Applicant-Tracker-HAT-

./: .env.example  .gitignore  BATCH_FILE_FIX.md  CLAUDE_PROMPT.md  COMPLETION_STATUS.md  CONTRIBUTING.md  Demo_ML_Ranking_System.bat  Dockerfile  ENHANCED_FEATURES.md  ENHANCEMENT_SUMMARY.md  Enhanced_CLI_Screener.bat  FILE_GUIDE.md  Fix_Missing_Packages.bat  Install_Enhanced_Features.bat  Install_Tesseract_OCR.bat  LICENSE  Launch_Web_App.bat  ML_RANKING_IMPLEMENTATION_COMPLETE.md  OCR_SETUP_GUIDE.md  Open_Latest_Results.bat  PRODUCTION_UPGRADE_STATUS.md  QUICKSTART.md  Quick_Setup.bat  Quick_Start_Screener.bat  README.md  README_ENHANCED.md  README_FINAL.md  README_NEW.md  ROYALTON_INSTRUCTIONS.md  Restart_Screener.bat  Royalton_AI_Screener.bat  Royalton_AI_Web.bat  Run_Demo.bat  SETUP_COMPLETE.md  Start_LLM_Quick_Pick.bat  Start_Watch_Mode.bat  Start_Web_App.bat  Stop_Screener.bat  TROUBLESHOOTING_GUIDE.md  Update_HAT.bat  (+29 more)
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 001_initial.py
app/: __init__.py  config.py  database.py  deps.py  main.py
app/common/: errors.py
app/ml/: __init__.py  bias_safety.py  embeddings.py  features.py  ranker.py  store.py
app/models/: application.py  audit.py  base.py  candidate.py  experience.py  role.py  user.py
app/nlp/: skills_map.yaml  stopwords.txt
assets/: README.md
config/: scoring.yaml
data/: hat.db
input_resumes/: README.txt
job_descriptions/: README.md
plugins/: recency_boost.py
scripts/: compile_all.py  run_demo.sh  setup_ml_system.py  smoke_export_test.py  train_ml_models.py
tests/: test_benchmarks_and_plugins.py  test_explain_mode_smoke.py  test_imports.py  test_repo_smoke.py  test_scoring_snapshot.py
(+23 files in other folders)
