[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hr-ats"
version = "1.0.0"
description = "Lightweight HR Applicant Tracker System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.6",
    "pydantic[email]>=2.4.0",
    "pydantic-settings>=2.0.0",
    "passlib[argon2]>=1.7.4",
    "pyjwt>=2.8.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    # Local SQLite instead of PostgreSQL
    "aiosqlite>=0.19.0",
    # Remove pgvector - use simple text search instead
    # Remove Celery/Redis - use synchronous processing
    # Remove boto3/MinIO - use local file storage
    "python-magic>=0.4.27",
    "pdfminer.six>=20221105",
    "python-docx>=1.1.0",
    # Remove OCR (pytesseract requires paid Tesseract)
    "pillow>=10.0.0",
    # Use smaller, free NLP models
    "nltk>=3.8.1",
    "sentence-transformers>=2.2.2",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    # ML Ranking dependencies
    "faiss-cpu>=1.7.4",
    "rapidfuzz>=3.0.0",
    "xgboost>=1.7.0",
    "lightgbm>=4.0.0",
    "joblib>=1.3.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "structlog>=23.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88
